# ai4sec

./: .dockerignore  .env.example  .gitignore  README.en.md  README.md  docker-compose.yml  start_ai4sec.sh
backend/: Dockerfile.patch  pyproject.toml
backend/app/: config.py  main.py  rate_limit.py
backend/app/api/: daily.py  knowledge.py  knowledge_spaces.py  library.py  paper_notes.py  papers.py  runs.py  settings.py  system.py  translator.py
backend/app/db/: database.py  schema.sql
backend/app/models/: schemas.py
backend/app/services/: arxiv_client.py  citation_graph.py  construction_scheduler.py  corpus_qa.py  daily_recommendation_scoring.py  daily_recommendations.py  daily_scheduler.py  dify_client.py  dify_sync.py  entity_registry.py  evidence_anchorer.py  evidence_extractor.py  evidence_store.py  external_note_matching.py  external_note_parser.py  (+25 more)
backend/tests/: test_corpus_qa.py  test_daily_recommendations.py  test_database_concurrency.py  test_dify_client.py  test_dify_sync.py  test_evidence_anchorer.py  test_evidence_store.py  test_external_paper_notes.py  test_knowledge_assets.py  test_knowledge_card_generator.py  test_knowledge_spaces.py  test_knowledge_synthesis.py  test_lens_segmented.py  test_llm_service.py  test_mineru_timeout.py  test_paper_library.py  test_paper_partitioner.py  test_publication_rank_llm_config.py  test_qa_retrieval.py  test_qa_subgraph.py  test_rate_limit.py  test_research_construction.py  test_research_discovery.py  test_run_cancellation.py  test_run_stream_resume.py  test_settings_api.py  test_translate_workflow.py
(+80 files in other folders)
