[project]
name = "scholar-backend"
version = "0.1.0"
description = "Academic paper reading platform backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.27",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
    "requests>=2.33.0",
    "idna>=3.15",
    "urllib3>=2.7.0",
    "langchain-core>=1.3.3",
    "langsmith>=0.8.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.9",
    "pytest>=9.0.3",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
